Fix: Add font size to txt on history page for laptop screens to make it more readable.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -435,6 +435,10 @@ h3 {
         width: 50%;
         height: 90vh;
     }
+
+    #what p {
+        font-size: 24px;
+    }
     #jphistory {
         background: url('../images/jphistory.png') no-repeat center top;
            height: 80vh;
